@@ -24,7 +24,7 @@ use TrigT1CaloUtils             TrigT1CaloUtils-*       Trigger/TrigT1
 use TrigT1CaloEvent             TrigT1CaloEvent-*       Trigger/TrigT1
 use TrigT1Interfaces    	TrigT1Interfaces-*    	Trigger/TrigT1
 #use TrigT1CaloByteStream 	TrigT1CaloByteStream-* 	Trigger/TrigT1
-use TrigT1CaloTools		TrigT1CaloTools-*      	Trigger/TrigT1
+use TrigT1CaloToolInterfaces	TrigT1CaloToolInterfaces-* Trigger/TrigT1
 
 use TrigT1CaloCalibTools	TrigT1CaloCalibTools-*	Trigger/TrigT1
 use CaloTriggerTool		CaloTriggerTool-*	Calorimeter		
