@@ -31,8 +31,8 @@
 #include "TrigT1CaloEvent/RODHeader.h"
 #include "TrigT1CaloEvent/TriggerTower.h"
 #include "TrigT1CaloUtils/TriggerTowerKey.h"
-#include "TrigT1CaloTools/IL1EmTauTools.h"
-#include "TrigT1CaloTools/IL1CPHitsTools.h"
+#include "TrigT1CaloToolInterfaces/IL1EmTauTools.h"
+#include "TrigT1CaloToolInterfaces/IL1CPHitsTools.h"
 #include "TrigT1Interfaces/Coordinate.h"
 #include "TrigT1Interfaces/CoordinateRange.h"
 #include "TrigT1Interfaces/CPRoIDecoder.h"
