@@ -96,10 +96,10 @@
 #include "TrigT1CaloEvent/JEMEtSums.h"
 #include "TrigT1CaloEvent/CMMEtSums.h"
 #include "TrigT1CaloEvent/TriggerTower.h"
-#include "TrigT1CaloTools/IL1JEPHitsTools.h"
-#include "TrigT1CaloTools/IL1JetTools.h"
-#include "TrigT1CaloTools/IL1JetElementTools.h"
-#include "TrigT1CaloTools/IL1JEPEtSumsTools.h"
+#include "TrigT1CaloToolInterfaces/IL1JEPHitsTools.h"
+#include "TrigT1CaloToolInterfaces/IL1JetTools.h"
+#include "TrigT1CaloToolInterfaces/IL1JetElementTools.h"
+#include "TrigT1CaloToolInterfaces/IL1JEPEtSumsTools.h"
 #include "TrigT1Interfaces/Coordinate.h"
 #include "TrigT1Interfaces/TrigT1CaloDefs.h"
 
